bigram model with vmap is now ready for video

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -464,11 +464,11 @@
         "output.shape"
       ],
       "metadata": {
-        "id": "EiE6Yl0QXFml",
-        "outputId": "3e75a29a-a2dd-4cb9-ff00-8f5b91491462",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EiE6Yl0QXFml",
+        "outputId": "3e75a29a-a2dd-4cb9-ff00-8f5b91491462"
       },
       "execution_count": 68,
       "outputs": [
@@ -524,11 +524,11 @@
         "forward_pass(params=params, batch=batch)"
       ],
       "metadata": {
-        "id": "KCh6wzoHYWDm",
-        "outputId": "3aa050c3-2ea5-4dfc-a429-c3572afa67eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KCh6wzoHYWDm",
+        "outputId": "3aa050c3-2ea5-4dfc-a429-c3572afa67eb"
       },
       "execution_count": 77,
       "outputs": [
@@ -547,12 +547,12 @@
     {
       "cell_type": "code",
       "source": [
-        "grad_fn = jax.grad(forward_pass, argnums=(0))  # differentiate wrt 0th pos argument."
+        "grad_fn = jax.value_and_grad(forward_pass, argnums=(0))  # differentiate wrt 0th pos argument."
       ],
       "metadata": {
         "id": "lJnYF1OtGzPq"
       },
-      "execution_count": 79,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -560,23 +560,26 @@
       "source": [
         "# Test forward pass and grads.\n",
         "# Grads would be the gradients for params.\n",
-        "grads = grad_fn(params, batch)\n",
-        "println(grads)"
+        "loss, grads = grad_fn(params, batch)\n",
+        "println(\"loss\", loss, \"grads\", grads)"
       ],
       "metadata": {
         "id": "o3XKCpCJHQip",
-        "outputId": "c2616851-74cd-4cac-e3c4-46babc994487",
+        "outputId": "c5fdf480-33c6-4d71-fa60-3e0a59fded9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 81,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'token_embedding_table': {'embedding': Array([[0.00103511, 0.00097044, 0.00093559, ..., 0.00089521, 0.001064  ,\n",
+            "loss\n",
+            "4.1798697\n",
+            "grads\n",
+            "{'token_embedding_table': {'embedding': Array([[0.0010351 , 0.00097044, 0.00093559, ..., 0.00089521, 0.00106399,\n",
             "        0.00093856],\n",
             "       [0.00152714, 0.00157371, 0.00149051, ..., 0.00147518, 0.00161794,\n",
             "        0.00155381],\n",
@@ -604,22 +607,22 @@
       ],
       "metadata": {
         "id": "qLHB0BpQHfI1",
-        "outputId": "c8225ec3-d33b-4279-cf4b-558a90bf8b7b",
+        "outputId": "cd252920-a256-4e92-cb42-d5e73e817b4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 82,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "params before:\n",
-            "{'token_embedding_table': {'embedding': Array([[ 0.0752212 ,  0.01071652, -0.02585994, ..., -0.06997449,\n",
-            "         0.10274917, -0.0226865 ],\n",
-            "       [ 0.09400459,  0.12404279,  0.06972364, ...,  0.0593865 ,\n",
-            "         0.1517611 ,  0.11131446],\n",
+            "{'token_embedding_table': {'embedding': Array([[ 0.07522016,  0.01071555, -0.02586087, ..., -0.06997538,\n",
+            "         0.1027481 , -0.02268744],\n",
+            "       [ 0.09400307,  0.12404122,  0.06972215, ...,  0.05938502,\n",
+            "         0.15175948,  0.1113129 ],\n",
             "       [-0.0302137 , -0.07326671, -0.2515272 , ...,  0.20769818,\n",
             "         0.01281604,  0.03134193],\n",
             "       ...,\n",
@@ -630,10 +633,10 @@
             "       [-0.12428083, -0.13785616, -0.12170235, ..., -0.07394623,\n",
             "         0.19811267, -0.06473607]], dtype=float32)}}\n",
             "params after:\n",
-            "{'token_embedding_table': {'embedding': Array([[ 0.07522016,  0.01071555, -0.02586087, ..., -0.06997538,\n",
-            "         0.1027481 , -0.02268744],\n",
-            "       [ 0.09400307,  0.12404122,  0.06972215, ...,  0.05938502,\n",
-            "         0.15175948,  0.1113129 ],\n",
+            "{'token_embedding_table': {'embedding': Array([[ 0.07521912,  0.01071458, -0.02586181, ..., -0.06997628,\n",
+            "         0.10274704, -0.02268838],\n",
+            "       [ 0.09400154,  0.12403965,  0.06972066, ...,  0.05938355,\n",
+            "         0.15175785,  0.11131135],\n",
             "       [-0.0302137 , -0.07326671, -0.2515272 , ...,  0.20769818,\n",
             "         0.01281604,  0.03134193],\n",
             "       ...,\n",
@@ -650,7 +653,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Writing train step in flax"
+        "# Writing train step in flax\n",
+        "## copy-pasting everything at one place and running a train step."
       ],
       "metadata": {
         "id": "LKPwDOFmIaSE"
@@ -659,68 +663,70 @@
     {
       "cell_type": "code",
       "source": [
-        "def compute_loss(params, state, batch):\n",
+        "class BigramLangModel(nn.Module):\n",
+        "  \"\"\"Reads one char and predicits the next char.\"\"\"\n",
+        "  vocab_size: int\n",
+        "\n",
+        "  def setup(self):\n",
+        "    super().setup()\n",
+        "    self.token_embedding_table = nn.Embed(num_embeddings=self.vocab_size, features=self.vocab_size)\n",
+        "\n",
+        "  def __call__(self, inputs):\n",
+        "    # Run block size inputs through embedding lookup.\n",
+        "    # For each char, you get the logit predicted for that char.\n",
+        "    # Then, you use the target token for that input and do a cross_entropy_loss.\n",
+        "    logits = self.token_embedding_table(inputs)\n",
+        "    return logits\n",
+        "\n",
+        "def forward_pass(params, state, batch):\n",
         "  inputs, targets = batch\n",
         "  logits = state.apply_fn({\"params\": params}, inputs)\n",
-        "  # println(logits)\n",
         "  loss = optax.softmax_cross_entropy_with_integer_labels(logits, targets)\n",
         "  loss = loss.mean()\n",
-        "  return loss"
-      ],
-      "metadata": {
-        "id": "XTFr_QJgIjE8"
-      },
-      "execution_count": 18,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "grad_fn = jax.value_and_grad(compute_loss, argnums=(0))"
-      ],
-      "metadata": {
-        "id": "oHtnU9jjJf52"
-      },
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "params = model.init(jrand.PRNGKey(90), jnp.ones(shape=(1, BLOCK_SIZE), dtype=jnp.int32))[\"params\"]\n",
+        "  return loss\n",
+        "\n",
+        "model = BigramLangModel(vocab_size=65)\n",
+        "\n",
+        "sample_input_row = jnp.ones(shape=[1, 1], dtype=jnp.int32)\n",
+        "output, params = model.init_with_output(jrand.PRNGKey(99), sample_input_row)\n",
+        "params = params[\"params\"]\n",
+        "\n",
+        "model_apply_batch = jax.vmap(model.apply, in_axes=(None, 0), out_axes=(0))\n",
+        "\n",
+        "grad_fn = jax.value_and_grad(forward_pass, argnums=(0))  # differentiate wrt 0th pos argument.\n",
+        "\n",
         "opt = optax.adam(learning_rate=0.01)\n",
-        "state = train_state.TrainState.create(apply_fn=model.apply, params=params, tx=opt)\n",
+        "state = train_state.TrainState.create(apply_fn=model_apply_batch, params=params, tx=opt)\n",
         "\n",
         "for epoch in range(1000):\n",
         "  batch = get_batch()\n",
         "  loss, grads = grad_fn(state.params, state, batch)\n",
         "  print(loss) if epoch%100==0 else None\n",
-        "  state = state.apply_gradients(grads=grads)\n",
-        "\n"
+        "  state = state.apply_gradients(grads=grads)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gtzCS8NzMJx9",
-        "outputId": "0d8a84b6-0d88-46d0-bb41-902552e78a23"
+        "outputId": "59064843-f22d-46d5-c311-001ffbb69225"
       },
-      "execution_count": 21,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4.1893883\n",
-            "3.5785098\n",
-            "3.2410522\n",
-            "2.8703156\n",
-            "2.7978456\n",
-            "2.7443452\n",
-            "2.7087464\n",
-            "2.4864938\n",
-            "2.5336409\n",
-            "2.3312209\n"
+            "4.2134094\n",
+            "3.570645\n",
+            "3.0553403\n",
+            "2.65412\n",
+            "2.7045884\n",
+            "2.9713573\n",
+            "2.7867646\n",
+            "2.2159164\n",
+            "2.3543985\n",
+            "2.3590276\n"
           ]
         }
       ]
@@ -731,7 +737,7 @@
         "## Code for generating tokens\n",
         "\n",
         "input_token = \"n\"\n",
-        "encode(input_token, stoi)"
+        "encode(input_token, stoi)\n"
       ],
       "metadata": {
         "colab": {
