generate code for bigram model is fixed.

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -25,38 +25,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "6427RRkAbysU",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3e4445c4-1d06-465a-8752-974f198e3077"
+        "id": "6427RRkAbysU"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2024-02-03 04:17:27--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1115394 (1.1M) [text/plain]\n",
-            "Saving to: ‘input.txt’\n",
-            "\n",
-            "\rinput.txt             0%[                    ]       0  --.-KB/s               \rinput.txt           100%[===================>]   1.06M  --.-KB/s    in 0.009s  \n",
-            "\n",
-            "2024-02-03 04:17:27 (118 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
-            "\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m26.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# We always start with a dataset to train on. Let's download the tiny shakespeare dataset\n",
         "!wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
@@ -732,10 +705,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Code for generating tokens"
+      ],
+      "metadata": {
+        "id": "Bze9wctCbxls"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "## Code for generating tokens\n",
-        "\n",
         "input_token = \"n\"\n",
         "encode(input_token, stoi)\n"
       ],
@@ -744,9 +724,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h2BUBirGMWo6",
-        "outputId": "da1fea0f-0bda-4d65-fcbe-4d863c361b7b"
+        "outputId": "758fce19-f5d1-4e5e-be33-488731d21f34"
       },
-      "execution_count": 23,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -756,7 +736,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 92
         }
       ]
     },
@@ -771,9 +751,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8p4A99r1NKx-",
-        "outputId": "ce8bcf94-27cf-4ad9-e0bc-c5a78c362105"
+        "outputId": "f107e956-c515-4d64-db56-130a4fdc37a4"
       },
-      "execution_count": 26,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +763,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 93
         }
       ]
     },
@@ -795,32 +775,235 @@
       "metadata": {
         "id": "cJwJPnIlNSEP"
       },
-      "execution_count": 30,
+      "execution_count": 94,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "next_token_logit.shape"
+        "next_token_logit"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Df1oFKh9N4oj",
-        "outputId": "ca64201e-8e15-4e2a-beb3-2cbf53547e82"
+        "outputId": "d8346b03-af85-4be6-e7cb-0e4f6ebd5dc5"
       },
-      "execution_count": 32,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(1, 1, 65)"
+              "Array([[[-1.0232894 ,  1.8385645 , -2.469133  , -3.266926  ,\n",
+              "         -3.3031323 , -1.1632278 , -0.34573704, -3.442902  ,\n",
+              "         -0.9070676 , -3.4511247 , -0.44161656, -1.6081074 ,\n",
+              "         -1.51128   , -3.4369752 , -3.2907372 , -3.6673677 ,\n",
+              "         -3.2516959 , -3.416642  , -3.6054049 , -3.5976338 ,\n",
+              "         -3.5368936 , -3.4078925 , -3.3620389 , -3.4841275 ,\n",
+              "         -3.4045694 , -3.6051226 , -3.385455  , -3.5794852 ,\n",
+              "         -3.4645708 , -3.5307362 , -3.5455844 , -3.4387655 ,\n",
+              "         -3.2596982 , -3.4703662 , -3.3139927 , -3.6330523 ,\n",
+              "         -3.487057  , -3.6472735 , -3.4515846 , -0.10225921,\n",
+              "         -2.7506816 , -0.00686612,  1.5287826 ,  1.0991529 ,\n",
+              "         -1.0509009 ,  0.9957466 , -3.0814571 , -0.86845374,\n",
+              "         -3.5433512 , -0.9937933 , -1.779581  , -3.6798508 ,\n",
+              "         -0.8582108 ,  1.3682721 , -3.7532322 , -2.4185874 ,\n",
+              "         -2.1847663 ,  0.6241743 ,  0.56569797, -1.0865779 ,\n",
+              "         -3.3133779 , -2.105813  , -3.3035421 , -1.0432335 ,\n",
+              "         -3.4339848 ]]], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "init_key = jrand.PRNGKey(99)\n",
+        "key, split_key = jrand.split(init_key)"
+      ],
+      "metadata": {
+        "id": "OiIl31K0cQVj"
+      },
+      "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next_to_next_token = jrand.categorical(split_key, next_token_logit)\n",
+        "next_to_next_token"
+      ],
+      "metadata": {
+        "id": "hMY9sAsCczWf",
+        "outputId": "b3e3435a-bc69-480c-efe4-66fd0bda3ca0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([[42]], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "decode(next_to_next_token.tolist()[0], itos)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "7gpbNLGCc8k-",
+        "outputId": "4e377962-a5f9-414f-f9c9-473d0a3e90de"
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'d'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next_to_next_to_next_logit = state.apply_fn({\"params\": state.params}, next_to_next_token)"
+      ],
+      "metadata": {
+        "id": "9yoh9KIXdby-"
+      },
+      "execution_count": 110,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "key, split_key = jrand.split(key)"
+      ],
+      "metadata": {
+        "id": "eT4SCAXidmBi"
+      },
+      "execution_count": 112,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next_to_next_to_next_token = jrand.categorical(split_key, next_token_logit)\n",
+        "\n",
+        "next_to_next_to_next_token"
+      ],
+      "metadata": {
+        "id": "JE6B49q2dkNm",
+        "outputId": "7c8e6926-830e-4e09-fcce-4af9095b2ccb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([[1]], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 115
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "decode(next_to_next_to_next_token.tolist()[0], itos)"
+      ],
+      "metadata": {
+        "id": "qGbhB8K7d2B0",
+        "outputId": "5887e6b3-7b65-4a3b-e3ca-61a01b56a40b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "' '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 116
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Putting together the generate code\n",
+        "\n",
+        "input_token = jnp.array([[52]], dtype=jnp.int32)\n",
+        "key = jrand.PRNGKey(99)\n",
+        "\n",
+        "result = \"\"\n",
+        "for i in range(100):\n",
+        "  key, split_key = jrand.split(key)\n",
+        "  next_token_logit = state.apply_fn({\"params\": state.params}, input_token)\n",
+        "  next_token = jrand.categorical(split_key, next_token_logit)\n",
+        "  next_token_decode = decode(next_token.tolist()[0], itos)\n",
+        "  result = result + next_token_decode\n",
+        "\n",
+        "print(result)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "keaylzQod6rh",
+        "outputId": "eea6e5c5-7977-4fee-d8e4-6362a8822232",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "d ddeod oaJ\n",
+            " doddo dftdcertdd, gdgdx,,.,,d .tg a'd  oeood to:oa ectcodttkg ed ogoc gd gfxs  ;gaeko e\n"
+          ]
         }
       ]
     },
