creating new version of language model that is easy to explain on the video

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -1621,7 +1621,7 @@
         "outputId": "d68177b3-6440-42ca-a11d-d5ca31a860d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 315
+          "height": 295
         }
       },
       "execution_count": 168,
@@ -5272,13 +5272,460 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# Putting together new Bigram model"
+      ],
       "metadata": {
         "id": "jegiwSi3fsMY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BigramLangModel(nn.Module):\n",
+        "  \"\"\"Reads one char and predicits the next char.\"\"\"\n",
+        "  vocab_size: int # number of vocabulary (number of rows of embedding table)\n",
+        "  n_embed: int # embedding dim after lookup\n",
+        "\n",
+        "  def setup(self):\n",
+        "    super().setup()\n",
+        "    # number of channels you want to use for store info for each token.\n",
+        "    self.C = self.vocab_size\n",
+        "\n",
+        "    self.token_embedding_table = nn.Embed(num_embeddings=self.vocab_size, features=self.n_embed)\n",
+        "\n",
+        "    self.lang_model_head = nn.Dense(features=self.C)\n",
+        "\n",
+        "  def __call__(self, block_of_tokens: jnp.array):\n",
+        "    \"\"\"Accepts a block of tokens.\"\"\"\n",
+        "\n",
+        "    # generate em for each token. output: (T, n_embed)\n",
+        "    token_embs = self.token_embedding_table(block_of_tokens)\n",
+        "\n",
+        "    # generate logits for each token. output: (T, channels for info -- C)\n",
+        "    token_logits = self.lang_model_head(token_embs)"
+      ],
+      "metadata": {
+        "id": "PieI67T3gHcK"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Add positional embeddings to the above."
+      ],
+      "metadata": {
+        "id": "xgPfy8ogiHyN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "block_of_tokens_example = jnp.ones(shape=(1, 8))\n",
+        "block_of_tokens_example, block_of_tokens_example.shape, block_of_tokens_example.shape[1]"
+      ],
+      "metadata": {
+        "id": "vZYnHm6djluj",
+        "outputId": "13a0d4a2-ad0e-44d3-dde8-a3829b04a253",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 234,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 30px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 60px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(Array([[1., 1., 1., 1., 1., 1., 1., 1.]], dtype=float32), (1, 8), 8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 234
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_pos = block_of_tokens_example.shape[1]\n",
+        "num_pos"
+      ],
+      "metadata": {
+        "id": "388ZajvbkPwp",
+        "outputId": "e642a927-9ea4-4f54-dd07-bbd20313330c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 236,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 30px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 60px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 236
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "jnp.arange(0, num_pos)"
+      ],
+      "metadata": {
+        "id": "MCYxlaI0kReC",
+        "outputId": "9e3e5548-d14c-4414-f3c1-c79de4b323b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 242,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 30px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 60px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([0, 1, 2, 3, 4, 5, 6, 7], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 242
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class LanguageModel(nn.Module):\n",
+        "  \"\"\"Reads one char and predicits the next char.\"\"\"\n",
+        "  vocab_size: int # number of vocabulary (number of rows of embedding table)\n",
+        "  n_embed: int # embedding dim after lookup\n",
+        "\n",
+        "  block_size: int # T, i.e., number of tokens attention block is looking at once\n",
+        "\n",
+        "  def setup(self):\n",
+        "    super().setup()\n",
+        "    # number of channels you want to use for store info for each token.\n",
+        "    self.C = self.vocab_size\n",
+        "\n",
+        "    self.token_embedding_table = nn.Embed(num_embeddings=self.vocab_size, features=self.n_embed)\n",
+        "\n",
+        "    self.pos_embedding_table = nn.Embed(num_embeddings=self.block_size, features=self.n_embed)\n",
+        "\n",
+        "    self.lang_model_head = nn.Dense(features=self.C)\n",
+        "\n",
+        "  def __call__(self, block_of_tokens: jnp.array):\n",
+        "    \"\"\"Accepts a block of tokens, like (1, 8).\"\"\"\n",
+        "\n",
+        "    # generate em for each token. output: (T, n_embed)\n",
+        "    token_embs = self.token_embedding_table(block_of_tokens)\n",
+        "\n",
+        "    # generate position embs for each token.\n",
+        "    ## get token positions.\n",
+        "    num_pos = block_of_tokens.shape[1]\n",
+        "    positions = jnp.arange(0, num_pos)\n",
+        "    pos_embs = self.pos_embedding_table(positions)\n",
+        "\n",
+        "    # generate actual input to attention, x, which is sum of token_embs + pos_embs\n",
+        "    x = token_embs + pos_embs\n",
+        "\n",
+        "    # generate logits for each token. output: (T, channels for info -- C)\n",
+        "    token_logits = self.lang_model_head(x)\n"
+      ],
+      "metadata": {
+        "id": "wd0Z83BuiLQI",
+        "outputId": "b93981f1-10bf-4dd8-9826-d70649764e3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 251,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 30px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 60px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
